// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/use-x-agent/demo/custom.tsx correctly 1`] = `
Array [
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical css-var-«R0» ant-form-css-var"
  >
    <div
      class="ant-form-item css-var-«R0» ant-form-css-var"
    >
      <div
        class="ant-row ant-form-item-row css-var-«R0»"
      >
        <div
          class="ant-col ant-form-item-label css-var-«R0»"
        >
          <label
            class=""
            for="question"
            title="Question"
          >
            Question
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control css-var-«R0»"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input ant-input-outlined css-var-«R0» ant-input-css-var"
                id="question"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="submit"
    >
      <span>
        submit
      </span>
    </button>
  </form>,
  <div
    class="ant-divider css-var-«R0» ant-divider-horizontal ant-divider-rail"
    role="separator"
  />,
  <article
    class="ant-typography css-var-«R0»"
  >
    <ul />
  </article>,
]
`;

exports[`renders components/use-x-agent/demo/model.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal css-var-«R0» ant-splitter-css-var"
>
  <div
    class="ant-splitter-panel"
    style="height:300px;flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-splitter ant-splitter-vertical css-var-«R0» ant-splitter-css-var"
    >
      <div
        class="ant-splitter-panel"
        style="margin:0 16px;flex-basis:auto;flex-grow:1"
      >
        <div
          class="ant-flex css-var-«R0» ant-flex-align-stretch ant-flex-gap-large ant-flex-vertical"
        >
          <input
            class="ant-input ant-input-outlined css-var-«R0» ant-input-css-var"
            type="text"
            value="hello, who are u?"
          />
          <div
            class="ant-flex css-var-«R0» ant-flex-gap-small"
          >
            <button
              class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
              type="button"
            >
              <span>
                Agent Request
              </span>
            </button>
            <button
              class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
              disabled=""
              type="button"
            >
              <span>
                Agent Abort
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="50"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-dragger"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="margin:16px;flex-basis:auto;flex-grow:1"
      >
        <div
          class="ant-typography css-var-«R0»"
        />
      </div>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-thought-chain css-var-«R0» ant-thought-chain-box"
      style="margin-left:16px"
    >
      <div
        class="ant-thought-chain-node"
      >
        <div
          class="ant-thought-chain-status ant-thought-chain-node-icon"
        >
          <span
            aria-label="tags"
            class="anticon anticon-tags"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="tags"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-thought-chain-node-box"
        >
          <div
            class="ant-thought-chain-node-header"
          >
            <div
              class="ant-thought-chain-node-title"
            >
              Agent Request Log
            </div>
            <div
              class="ant-thought-chain-node-description"
            >
              request 
            </div>
          </div>
          <div
            class="ant-thought-chain-node-content"
          >
            <div
              class="ant-thought-chain-node-content-box"
            >
              <div
                class="ant-descriptions css-var-«R0»"
              >
                <div
                  class="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Status
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              -
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Update Times
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              0
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/use-x-agent/demo/preset.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal css-var-«R0» ant-splitter-css-var"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <button
      class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Agent Request
      </span>
    </button>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-thought-chain css-var-«R0» ant-thought-chain-box"
      style="margin-left:16px"
    >
      <div
        class="ant-thought-chain-node"
      >
        <div
          class="ant-thought-chain-status ant-thought-chain-node-icon"
        >
          <span
            aria-label="tags"
            class="anticon anticon-tags"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="tags"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-thought-chain-node-box"
        >
          <div
            class="ant-thought-chain-node-header"
          >
            <div
              class="ant-thought-chain-node-title"
            >
              Agent Request Log
            </div>
          </div>
          <div
            class="ant-thought-chain-node-content"
          >
            <div
              class="ant-thought-chain-node-content-box"
            >
              <div
                class="ant-descriptions css-var-«R0»"
              >
                <div
                  class="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Status
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              -
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Update Times
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              0
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/use-x-agent/demo/request-options.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal css-var-«R0» ant-splitter-css-var"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-splitter ant-splitter-vertical css-var-«R0» ant-splitter-css-var"
    >
      <div
        class="ant-splitter-panel"
        style="flex-basis:auto;flex-grow:1"
      >
        <div
          class="ant-flex css-var-«R0» ant-flex-gap-small"
        >
          <button
            class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              Change Request Options
            </span>
          </button>
          <button
            class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              Agent Request
            </span>
          </button>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="50"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-dragger"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="flex-basis:auto;flex-grow:1"
      >
        <p>
          baseURL: 
          <!-- -->
          https://api.example.com/chat/v1
        </p>
        <p>
          model: 
          <!-- -->
          gpt-3.5-turbo
        </p>
        <p>
          dangerouslyApiKey: 
          <!-- -->
          Bearer sk-your-dangerouslyApiKey
        </p>
      </div>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-thought-chain css-var-«R0» ant-thought-chain-box"
      style="margin-left:16px"
    >
      <div
        class="ant-thought-chain-node"
      >
        <div
          class="ant-thought-chain-status ant-thought-chain-node-icon"
        >
          <span
            aria-label="tags"
            class="anticon anticon-tags"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="tags"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-thought-chain-node-box"
        >
          <div
            class="ant-thought-chain-node-header"
          >
            <div
              class="ant-thought-chain-node-title"
            >
              Agent Request Log
            </div>
          </div>
          <div
            class="ant-thought-chain-node-content"
          >
            <div
              class="ant-thought-chain-node-content-box"
            >
              <div
                class="ant-descriptions css-var-«R0»"
              >
                <div
                  class="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Status
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              -
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Update Times
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              0
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/use-x-agent/demo/requestParams.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal css-var-«R0» ant-splitter-css-var"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <button
      class="ant-btn css-var-«R0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <span>
        Agent Request
      </span>
    </button>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:auto;flex-grow:1"
  >
    <div
      class="ant-thought-chain css-var-«R0» ant-thought-chain-box"
      style="margin-left:16px"
    >
      <div
        class="ant-thought-chain-node"
      >
        <div
          class="ant-thought-chain-status ant-thought-chain-node-icon"
        >
          <span
            aria-label="tags"
            class="anticon anticon-tags"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="tags"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M483.2 790.3L861.4 412c1.7-1.7 2.5-4 2.3-6.3l-25.5-301.4c-.7-7.8-6.8-13.9-14.6-14.6L522.2 64.3c-2.3-.2-4.7.6-6.3 2.3L137.7 444.8a8.03 8.03 0 000 11.3l334.2 334.2c3.1 3.2 8.2 3.2 11.3 0zm62.6-651.7l224.6 19 19 224.6L477.5 694 233.9 450.5l311.9-311.9zm60.16 186.23a48 48 0 1067.88-67.89 48 48 0 10-67.88 67.89zM889.7 539.8l-39.6-39.5a8.03 8.03 0 00-11.3 0l-362 361.3-237.6-237a8.03 8.03 0 00-11.3 0l-39.6 39.5a8.03 8.03 0 000 11.3l243.2 242.8 39.6 39.5c3.1 3.1 8.2 3.1 11.3 0l407.3-406.6c3.1-3.1 3.1-8.2 0-11.3z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-thought-chain-node-box"
        >
          <div
            class="ant-thought-chain-node-header"
          >
            <div
              class="ant-thought-chain-node-title"
            >
              Agent Request Log
            </div>
          </div>
          <div
            class="ant-thought-chain-node-content"
          >
            <div
              class="ant-thought-chain-node-content-box"
            >
              <div
                class="ant-descriptions css-var-«R0»"
              >
                <div
                  class="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Status
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              -
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-descriptions-row"
                      >
                        <td
                          class="ant-descriptions-item"
                          colspan="1"
                        >
                          <div
                            class="ant-descriptions-item-container"
                          >
                            <span
                              class="ant-descriptions-item-label"
                            >
                              Update Times
                            </span>
                            <span
                              class="ant-descriptions-item-content"
                            >
                              0
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
